package com.programacaoiii.assistencia_tecnica.modelos.enums;

public enum EstadoOSEnum {
    ABERTA,
    AGUARDANDO_ORCAMENTO,
    AGUARDANDO_APROVACAO,
    EM_REPARO,
    FINALIZADA,
    CANCELADA;
}