package com.programacaoiii.assistencia_tecnica.modelos.enums;

public enum TipoHardwareEnum {
	COMPUTADOR,
	NOTEBOOK,
	CELULAR,
	OUTROS,
}
