package com.programacaoiii.assistencia_tecnica.modelos.enums;

public enum TipoPecaEnum {
	COMPUTADOR,
	NOTEBOOK,
	CELULAR,
	OUTROS,
}
