package com.programacaoiii.assistencia_tecnica.servicos.padroes.state;

public class EstadoCancelada extends EstadoOSAbstrato {

    public EstadoCancelada() {
    }
    
}