package com.programacaoiii.assistencia_tecnica.servicos.padroes.state;

public class EstadoFinalizada extends EstadoOSAbstrato {
    
    public EstadoFinalizada() {

    }
    
}